--- a/style2.css
+++ b/style2.css
@@ -9,3 +9,5 @@ h1,h2,h3{
 }
 div:hover{background-color:cyan;}
 a.highlight:hover{color:yellow;}
+p{font-size:16pt;line-height:125%;}
+div{margin-bottom:2cm;}
